# CMakeLearning

./: CMakeLists.txt  README.md
CMakeLearning/: CMakeLearning.cpp  CMakeLearning.h  CMakeLists.txt
MyStaticLib/: CMakeLists.txt  MyStaticLib.cpp  MyStaticLib.h
